	PR ipa/64982 	* cgraphunit.c (cgraph_node::expand_thunk): Look for stdarg 	thunks. 	* method.c (use_thunk): Do not check for stdarg thunks.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@220587 138bc75d-0d04-0410-961f-82ee72b054a4